# DigitalAudioWorkstation

./: CMakeLists.txt  README.md  globaltimeline.cpp  globaltimeline.h  globaltimeline.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  plans.md  timelinewidget.cpp  timelinewidget.h  timelinewidget.ui
audio/: audioassetmanager.cpp  audioassetmanager.h  audioclipmanager.cpp  audioclipmanager.h  audioengine.cpp  audioengine.h  audionode.cpp  audionode.h  audioparameter.cpp  audioparameter.h  audiostructs.h  audiotrack.cpp  audiotrack.h  globalsamplemanager.cpp  globalsamplemanager.h  projectsamplemanager.cpp  projectsamplemanager.h  samplemanager.cpp  samplemanager.h  track.cpp  track.h
core/: audiodoublebuffer.cpp  audiodoublebuffer.h  audiothreadpool.cpp  audiothreadpool.h  clipmanager.cpp  clipmanager.h  doublebuffer.cpp  doublebuffer.h  globalassetmanager.cpp  globalassetmanager.h  gridmanager.cpp  gridmanager.h  idmanager.cpp  idmanager.h  math.h  mixer.cpp  mixer.h  musictime.cpp  musictime.h  musictimemanager.cpp  musictimemanager.h  node.h  parameter.cpp  parameter.h  projectassetmanager.cpp  projectassetmanager.h  ringbuffer.cpp  ringbuffer.h  structs.cpp  structs.h  track.cpp  track.h  transport.cpp  transport.h
core/settings/: audiosettings.cpp  audiosettings.h  settings.cpp  settings.h  themes.cpp  themes.h  timesettings.cpp  timesettings.h
graphics/: arrangementview.cpp  arrangementview.h  audiographicstrack.cpp  audiographicstrack.h  audiosceneclip.cpp  audiosceneclip.h  basegraphicstrack.cpp  basegraphicstrack.h  basesceneclip.cpp  basesceneclip.h  globalscene.cpp  globalscene.h  playhead.cpp  playhead.h  tgraphicsview.cpp  tgraphicsview.h  timelineselector.cpp  timelineselector.h
instruments/: adsr.cpp  adsr.h  instrumentnode.cpp  instrumentnode.h
midi/: midiassetmanager.cpp  midiassetmanager.h  midiclipmanager.cpp  midiclipmanager.h  midinode.cpp  midinode.h  midiparser.cpp  midiparser.h  midiplaybackengine.cpp  midiplaybackengine.h  midistructs.h  miditrack.cpp  miditrack.h  projectmidiclipmanager.cpp  projectmidiclipmanager.h
widgets/: globaltimeline.cpp  globaltimeline.h  globaltimeline.ui  projectcontroller.cpp  projectcontroller.h  projectcontroller.ui
